--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                 <div>
                     <h3>At Your Services</h3>
-                    <hr>
+                    <hr class="divider3">
                 </div>
 
 
@@ -114,10 +114,10 @@
         </div>
 
 
-        <!-- Image
+         <!-- Image -->
         <div class="image">
 
-            <div class="container-fluid row">
+            <div class="img-fluid row">
 
                 <div class="col-12 col-sm-6 col-lg-4">
                     <img src="img\1.jpg" alt="Ảnh 1">
@@ -145,14 +145,14 @@
 
             </div>
 
-        </div> -->
+        </div> 
 
 
         <!-- Download -->
-        <div class="Download">
-            <div class="bg-black text-center btn-">
+        <div class="download">
+            <div class="bg-dark text-center ownload-content-btn ">
                 <div class="p-5 download-content">
-                    <h3 class="text-white">Free Download</h3>
+                    <h3 class="text-white h3 p-5">Free Download at Start Bootstrap!</h3>
                     <a class="btn btn-light btn-dl" href="">Download now!</a>
                 </div>
             </div>
@@ -164,8 +164,8 @@
             <div class="">
                 <div class="text-center">
                     <h2>Let's Get In Touch!</h2>
-                    <hr>
-                    <p>Ready to start your next project with us? Send us a messages and we will <br> get back to you
+                    <hr class="divider4">
+                    <p>Ready to start your next project with us? Send us a mesrsages and we will <br> get back to you
                         as
                         soon as possible!</p>
                 </div>
